kubernetes/Public-ApiIngress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: amiyabot-minigame-api-ingress
  namespace: amiya-bot
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: 50m
    cert-manager.io/cluster-issuer: letsencrypt-staging
spec:
  tls:
    - hosts:
        - game-api.anonymous-test.top
      secretName: game-api.anonymous-test.top.tls
  rules:
  - host: game-api.anonymous-test.top
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: amiyabot-minigame-api-service
            port:
              number: 80
