kubernetes/Public-Ingress-Amiyabot.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: amiyabot-minigame-ingress
  namespace: amiya-bot
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: 50m
    cert-manager.io/cluster-issuer: letsencrypt-http
spec:
  tls:
    - hosts:
        - game.amiyabot.com
      secretName: game.amiyabot.com.tls
  rules:
  - host: game.amiyabot.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: amiyabot-minigame-website-service
            port:
              number: 80
      - path: /api/
        pathType: Prefix
        backend:
          service:
            name: amiyabot-minigame-api-service
            port:
              number: 80   
      - path: /gamehub
        pathType: Prefix
        backend:
          service:
            name: amiyabot-minigame-api-service
            port:
              number: 80      
      - path: /connect/
        pathType: Prefix
        backend:
          service:
            name: amiyabot-minigame-api-service
            port:
              number: 80
