kubernetes/Public-Ingress-Deprecated.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: amiyabot-minigame-ingress-test
  namespace: amiya-bot
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: 50m
    cert-manager.io/cluster-issuer: letsencrypt-staging
spec:
  tls:
    - hosts:
        - minigame.anonymous-test.top
      secretName: minigame.anonymous-test.top.tls
  rules:
  - host: minigame.anonymous-test.top
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: amiyabot-minigame-website-service
            port:
              number: 80
      - path: /api/
        pathType: Prefix
        backend:
          service:
            name: amiyabot-minigame-api-service
            port:
              number: 80   
      - path: /gamehub
        pathType: Prefix
        backend:
          service:
            name: amiyabot-minigame-api-service
            port:
              number: 80      
      - path: /connect/
        pathType: Prefix
        backend:
          service:
            name: amiyabot-minigame-api-service
            port:
              number: 80
