kubernetes/Public-Redirect.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: redirect-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: 50m
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/configuration-snippet: |
      location = / {
        return 301 http://game.anonymous-test.top;
      }
      location ~ ^/(.+) {
        return 301 http://kutt.anonymous-test.top/$1;
      }
spec:
  tls:
    - hosts:
        - redirect.anonymous-test.top
      secretName: redirect.anonymous-test.top.tls
  rules:
  - host: redirect.anonymous-test.top
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dummy-service
            port:
              number: 80
