kubernetes/Test-Redirect.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: redirect-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: 50m
    cert-manager.io/cluster-issuer: letsencrypt-staging
    nginx.ingress.kubernetes.io/server-snippet: |
      location = / {
        return 301 http://game.hsyhhssyy.net;
      }
      location ~ ^/(.+) {
        return 301 http://kutt.hsyhhssyy.net/$1;
      }
spec:
  tls:
    - hosts:
        - redirect.hsyhhssyy.net
      secretName: redirect.hsyhhssyy.net.tls
  rules:
  - host: redirect.hsyhhssyy.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dummy-service
            port:
              number: 80
