kubernetes/Test-WebsiteIngress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: amiyabot-minigame-ingress
  namespace: amiya-bot
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: 50m
    cert-manager.io/cluster-issuer: letsencrypt-staging
spec:
  tls:
    - hosts:
        - game.hsyhhssyy.net
      secretName: game.hsyhhssyy.net.tls
  rules:
  - host: game.hsyhhssyy.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: amiyabot-minigame-center-website-service
            port:
              number: 80
